--- a/themes/vex-hugo/assets/scss/style.scss
+++ b/themes/vex-hugo/assets/scss/style.scss
@@ -6,6 +6,7 @@ sans-serif;
 $secondary-font: 'Droid Serif',
 serif;
 $primary-color: #f9a743;
+$primary-color: #a80039;
 $icon-font: 'themefisher-font' !important;
 
 /*--
