--- a/themes/vex-hugo/assets/scss/style.scss
+++ b/themes/vex-hugo/assets/scss/style.scss
@@ -5,7 +5,7 @@ $primary-font: 'Josefin Sans',
 sans-serif;
 $secondary-font: 'Droid Serif',
 serif;
-$primary-color: #f9a743;
+//$primary-color: #f9a743;
 $primary-color: #a80039;
 $icon-font: 'themefisher-font' !important;
 
@@ -126,6 +126,7 @@ a:active,
 a:focus,
 a:active {
   text-decoration: none;
+  color: #00abcc;
 }
 
 .section {
@@ -168,7 +169,7 @@ a:active {
   h2 {
     color: #3c3c3c;
     padding-bottom: 15px;
-    text-transform: capitalize;
+    //text-transform: capitalize;
     font-weight: 700;
     font-size: 40px;
     line-height: 40px;
@@ -184,7 +185,7 @@ a:active {
 .subheading {
   color: #3c3c3c;
   padding-bottom: 15px;
-  text-transform: capitalize;
+  //text-transform: capitalize;
   font-weight: 500;
   font-size: 32px;
   line-height: 45px;
@@ -202,7 +203,8 @@ a:active {
   padding: 15px 40px;
   display: inline-block;
   background-color: $primary-color;
-  box-shadow: 0 15px 40px rgba(249, 167, 68, 0.5);
+  //box-shadow: 0 15px 40px rgba(249, 167, 68, 0.5);
+  box-shadow: 0 5px 10px rgba(168, 0, 57, 0.3);
   background-image: linear-gradient(bottom, rgba(255, 239, 206, 0) 0%, rgba(255, 239, 206, 0.25) 100%);
 
   &:hover,
